--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
         <div class="kartu-profil">
-        <img scr="foto-profil.jpg" alt="foto provil saya"
+        <img scr="WhatsApp Image 2025-10-16 at 13.11.23.jpeg" alt="foto provil saya"
         <h1>safira dewi maharani</h1>
         <p>Siswa SMA yang tertarik dengan teknologi dan desain.selamat datang di website pertama saya!</p>
         <a href="https://www.instagram.com/usernameanda">kunjungi instagram Saya</a>
